fix: update background property in Nav.css for improved visibility

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,5 +1,5 @@
 .Nav {
-  background: rgb(255 255 255 / 90%);
+  background: rgb(255 255 255);
   position: sticky;
   top: 0;
   z-index: 2;
